Tree nodes no longer wrap.

--- a/css/jquery.ui.tree.css
+++ b/css/jquery.ui.tree.css
@@ -7,6 +7,7 @@
 .ui-tree li {
 	padding-left: 16px;
 	padding-top: 2px;
+	white-space: nowrap;
 }
 
 .ui-tree li div.ui-tree-expander {
